--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 
 
         <!-- inizio logo section  -->
-        <div class="header-top mr-bot mr-top line-h">
-            <img class="logo" src="/images/logo.svg" alt="logo">
-            <h1>Neori</h1>            
+        <div class="header-top mr-top line-h">
+            <img class="logo" src="../img/logo.png" alt="logo">
         </div>
         <!-- fine logo section  -->
 
@@ -54,6 +53,7 @@
             </nav>
         </div>
             <!-- fine nav  -->
+
             <!-- fine header top  -->
 
         <!--  inizio header bottom  -->
@@ -89,12 +89,24 @@
         <!-- inizio float-section  -->
         <aside class="float-section clear-fix">
             <aside class="content1  left">
-                <img src="../images/roman-kraft-WOzVqzpScrk-unsplash.jpg" alt="">
+
+               <!-- contenitore img layer -->
+                    <div class="img-float1">
+                        <div class="overlay"></div>
+                    </div>
+                <!-- fine contenitore layer-->
+
                 <h3>Something</h3>
                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam recusandae est nemo corporis! Nemo labore excepturi, autem, quas architecto magnam officia cupiditate, iusto iste numquam ipsum? Dolores quod neque temporibus?</p>
             </aside>
+
             <div class="content2  left">
-                <img src="../images/roman-kraft-WOzVqzpScrk-unsplash.jpg" alt="">
+                <!-- contenitore img layer -->  
+                <div class="img-float2">
+                    <div class="overlay"></div>
+                </div>
+                   <!-- fine contenitore layer-->
+
                 <h3>Something</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, at ex mollitia aut facilis error incidunt corrupti odio sit libero quam quis, enim dicta ea itaque dignissimos assumenda adipisci nam?
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate et laborum pariatur explicabo iste inventore quae ex modi quasi omnis. Aliquam earum quam nam nostrum reprehenderit exercitationem perspiciatis sequi voluptate.
@@ -109,11 +121,19 @@
                 Accusamus voluptate exercitationem minus consequuntur placeat, a, quae reiciendis ea animi recusandae sint cupiditate fugit quis aliquam suscipit. Quam ut blanditiis vel odit nobis magnam natus quo voluptates incidunt nam!
                 </p>
             </div>
+
             <aside class="content3  left">
-                <img src="/images/roman-kraft-WOzVqzpScrk-unsplash.jpg" alt="">
+
+                <!-- contenitore img layer -->
+                    <div class="img-float3">
+                        <div class="overlay"></div>
+                    </div>
+                <!-- fine contenitore layer -->
+
                 <h3>Something</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus iure unde optio quos nisi esse quia, mollitia nemo sint ipsa dolores amet vitae, animi, quibusdam reprehenderit. Dignissimos sunt consequatur itaque?</p>
             </aside>
+            
         </div>
         <!-- fine float-section  -->
 
